#73 changed contract structure, added dirty limit for results